--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
 <body>
     <!-- Hero Image section -->
     <section>
-        <div class="bg-image shadow-2-strong" id="intro">
-            <div class="container d-flex align-items-center justify-content-center text-center h-100">
-                <div class="text-white m-5 ">
-                    <h1 class="mb-5"> <span class="border border-4 rounded-circle p-2 ">D</span></h1>
-                    <h1 class="mb-4">WELCOME</h1>
-                    <h1 class="mb-2">TO DELANI STUDIO</h1>
+        <div class="bg-image shadow-2-strong position-relative" id="intro">
+            <div class="container  text-center">
+                <div class="text-white m-5 mt-50  text-center position-absolute">
+                    <img src="./assets/logo/logo.png" alt=""> <br><br><br>
+                    <h1 class="mb-4 display-4">WELCOME</h1><br>
+                    <h1 class="mb-3 display-4">TO DELANI STUDIO</h1>
                     <p>AMAZING PEOPLE ARE MAKING AMAZING DESIGNS IN A FUN ENVIRONMENT</p>
 
-                    <div class="mt-5">
-                        <img src="./assets/mouse_click.png" alt="">
-                    </div>
+                    
+                </div>
+                <div class="mt-5 position-absolute">
+                    <img src="./assets/mouse_click.png" alt="">
                 </div>
                
             </div>
