--- a/index.html
+++ b/index.html
@@ -205,9 +205,10 @@
                 </div>
                 <div class="col-md-3">
                     <div class="position-relative">
-                        <img id="hover-img8 " src="./assets/portfolio/work8.jpg" alt="project8">
+                        <img id="hover-img8" src="./assets/portfolio/work8.jpg" alt="">
                         <div class="hidden8 position-absolute border-style">
-                            <p class="hidden8 position-absolute fw-bold fs-4"> BAILEY WONGER</p>
+                            <p class="hidden8 position-absolute fw-bold fs-4 text-start"> BAILY <br>
+                            WONGER</p>
 
                         </div>
                         
